objects/GDT_ManageLicense_License__c.object
<CustomObject>
    <description>List of Salesforce licenses</description>
    <fields>
        <fullName>GDT_License_APIName__c</fullName>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GDT_License_Description__c</fullName>
        <label>Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GDT_License_LicenseType__c</fullName>
        <label>License Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GDT_License_MaxCustomApp__c</fullName>
        <label>Maximum custom applications</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GDT_License_MaxCustomObj__c</fullName>
        <label>Maximum custom objects</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GDT_License_Price__c</fullName>
        <inlineHelpText>€ / Utilisateur / Mois</inlineHelpText>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GDT_License_Summary__c</fullName>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <label>GDT ManageLicense License</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GDT_License_APIName__c</columns>
        <columns>GDT_License_Summary__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>License Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GDT ManageLicense Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>